add js libraries

--- a/main.html
+++ b/main.html
@@ -2,10 +2,23 @@
 <html lang="en-En">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Default Page Title</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>JetScript Main Page</title>
+    <!--<link rel="shortcut icon" href="favicon.ico">-->
+    <!--<link rel="icon" href="favicon.ico">-->
+    <!--Jquery-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
+    <!--Sculpt-->
+    <script src="skulpt/skulpt-stdlib.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt.min.js" type="text/javascript"></script>
+    <!--Bootstrap-->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!-- Optional bootstrap theme -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript for bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
