--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
     <!--<link rel="shortcut icon" href="favicon.ico">-->
     <!--<link rel="icon" href="favicon.ico">-->
     <!--Jquery-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"
+            type="text/javascript"></script>
     <!--Sculpt-->
     <script src="skulpt/skulpt.min.js" type="text/javascript"></script>
     <script src="skulpt/skulpt-stdlib.js" type="text/javascript"></script>
@@ -18,10 +19,68 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript for bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!--Custom style-->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+
+<div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+
+                <a class="navbar-brand" href="#">JetScript</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#level1">Level1</a></li>
+
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#about">About</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#about">Fork me</a></li>
+            </ul>
+
+        </div>
+    </nav>
+</div>
+<div class="main">
+    <div class="row">
+        <div class="col-md-2 col-md-offset-1 sidebar" id="top">
+            <ul>
+                <li>
+                    <a href="#description">Description</a>
+                </li>
+                <li>
+                    <a href="#code">Code</a>
+                </li>
+                <li>
+                    <a href="#results">Results</a>
+                </li>
+                <li class="last">
+                    <a href="#top">Back to top</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-7" id="description">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum."
+        </div>
+        <div id="code"></div>
+        <div id="results"></div>
+        <div id="about"></div>
+    </div>
+</div>
+</div>
 
 </body>
 </html>
