--- a/main.html
+++ b/main.html
@@ -6,26 +6,26 @@
     <!--<link rel="shortcut icon" href="favicon.ico">-->
     <!--<link rel="icon" href="favicon.ico">-->
     <!--Jquery-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"
+    <script src="/lib/jquery.min.js"
             type="text/javascript"></script>
     <!--Sculpt-->
-    <script src="skulpt/skulpt.min.js" type="text/javascript"></script>
-    <script src="skulpt/skulpt-stdlib.js" type="text/javascript"></script>
+    <script src="lib/skulpt/skulpt.min.js" type="text/javascript"></script>
+    <script src="lib/skulpt/skulpt-stdlib.js" type="text/javascript"></script>
     <!--Bootstrap-->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!-- Optional bootstrap theme -->
     <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+          href="/lib/bootstrap/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript for bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="/lib/bootstrap/bootstrap.min.js"></script>
     <!--Custom style-->
     <link rel="stylesheet" href="style.css">
     <!--CodeMirror-->
-    <script src="codemirror/codemirror.js"></script>
-    <link rel="stylesheet" href="codemirror/codemirror.css">
+    <script src="lib/codemirror/codemirror.js"></script>
+    <link rel="stylesheet" href="lib/codemirror/codemirror.css">
     <!--<link rel="stylesheet" href="codemirror/theme/elegant.css">-->
-    <script src="codemirror/python/python.js"></script>
+    <script src="lib/codemirror/python/python.js"></script>
 
 </head>
 
